

@startuml


skinparam monochrome reverse

title __PRESENTATION's Class Diagram__\n


namespace wasteless.server {
    namespace presentation {

       class wasteless.server.presentation.NotificationController {
                 - template : SimpMessagingTemplate
                 + onReceivedMessage()
                 + propertyChange()
                 + subscribeToWasterService()
                 ~ NotificationController()
        }
      namespace mediators {
        class wasteless.server.presentation.mediators.GroceryListMediator {
            + GroceryListMediator()
            + calculateWaste()
            + createGroceryList()
            + deleteGroceryList()
            + generateJsonReport()
            + generateTextReport()
            + getAllGroceryLists()
            + getGroceryListById()
            + updateGroceryList()
        }

        class wasteless.server.presentation.mediators.ItemMediator {
                    + ItemMediator()
                    + createItem()
                    + deleteItem()
                    + getAllItems()
                    + getItemById()
                    + updateItem()
        }
         class wasteless.server.presentation.mediators.UserMediator {
                     + UserMediator()
                     + createUser()
                     + deleteUser()
                     + getActiveUser()
                     + getAllUsers()
                     + getUserById()
                     + loginUser()
                     + updateUser()
         }
      }
    }

     namespace business {
          namespace command_handler {
            class wasteless.server.business.command_handler.GroceryListCommandHandler {
                + GroceryListCommandHandler()
                + calculateWaste()
                + createGroceryList()
                + deleteGroceryList()
                + generateJsonReport()
                + generateTextReport()
                + updateGroceryList()
            }

            class wasteless.server.business.command_handler.ItemCommandHandler {
                        + ItemCommandHandler()
                        + createItem()
                        + deleteItem()
                        + updateItem()
            }

             class wasteless.server.business.command_handler.UserCommandHandler {
                        + UserCommandHandler()
                        + createUser()
                        + deleteUser()
                        + loginUser()
                        + updateUser()
            }
          }


        namespace query_handler {
                class wasteless.server.business.query_handler.GroceryListQueryHandler {
                    + GroceryListQueryHandler()
                    + getAllGroceryLists()
                    + getGroceryListById()
                }

                class wasteless.server.business.query_handler.ItemQueryHandler {
                            + ItemQueryHandler()
                            + getAllItems()
                            + getItemById()
                }

                class wasteless.server.business.query_handler.UserQueryHandler {
                            + UserQueryHandler()
                            + getActiveUser()
                            + getAllUsers()
                            + getUserById()
                }
        }

        namespace command_service {
                class wasteless.server.business.command_service.GroceryListCommandService {
                    + GroceryListCommandService()
                    + createGroceryList()
                    + deleteGroceryList()
                    + updateGroceryList()
                }

                class wasteless.server.business.command_service.ItemCommandService {
                            + ItemCommandService()
                            + createItem()
                            + deleteItem()
                            + updateItem()
                }
                class wasteless.server.business.command_service.UserCommandService {
                                     + UserCommandService()
                                     + createUser()
                                     + deleteUser()
                                     + updateUser()
                 }
        }

        namespace query_service {
                class wasteless.server.business.query_service.GroceryListQueryService {
                    + GroceryListQueryService()
                    + getAllGroceryLists()
                    + getGroceryListById()
                }
                class wasteless.server.business.query_service.ItemQueryService {
                            + ItemQueryService()
                            + getAllItems()
                            + getItemById()
                }

                 class wasteless.server.business.query_service.UserQueryService {
                            + UserQueryService()
                            + getActiveUser()
                            + getAllUsers()
                            + getUserById()
                            + loginUser()
                }
       }
     }

       namespace persistance {
             interface wasteless.server.persistance.GroceryListRepository {
             }

              interface wasteless.server.persistance.ItemRepository {
               }

            interface wasteless.server.persistance.UserRepository {
                      {abstract} + findFirstByActiveTrue()
              }
       }
  }


   wasteless.server.presentation.NotificationController .up.|> java.beans.PropertyChangeListener
   wasteless.server.presentation.NotificationController o-- wasteless.server.business.WasteManagerService : wasteManagerService



   wasteless.server.business.command_service.GroceryListCommandService o-- wasteless.server.presentation.mapper.GroceryListMapper : groceryListMapper
    wasteless.server.business.command_service.GroceryListCommandService o-- wasteless.server.persistance.GroceryListRepository : groceryListRepository
    wasteless.server.business.command_service.GroceryListCommandService o-- wasteless.server.persistance.UserRepository : userRepository
    wasteless.server.business.command_service.ItemCommandService o-- wasteless.server.persistance.GroceryListRepository : groceryListRepository
    wasteless.server.business.command_service.ItemCommandService o-- wasteless.server.persistance.ItemRepository : itemRepository
    wasteless.server.business.command_service.UserCommandService o-- wasteless.server.persistance.UserRepository : userRepository

     wasteless.server.business.query_service.GroceryListQueryService o-- wasteless.server.presentation.mapper.GroceryListMapper : groceryListMapper
      wasteless.server.business.query_service.GroceryListQueryService o-- wasteless.server.persistance.GroceryListRepository : groceryListRepository
      wasteless.server.business.query_service.GroceryListQueryService o-- wasteless.server.persistance.UserRepository : userRepository
      wasteless.server.business.query_service.ItemQueryService o-- wasteless.server.persistance.GroceryListRepository : groceryListRepository
      wasteless.server.business.query_service.ItemQueryService o-- wasteless.server.persistance.ItemRepository : itemRepository
      wasteless.server.business.query_service.UserQueryService o-- wasteless.server.persistance.UserRepository : userRepository




  wasteless.server.business.command_handler.GroceryListCommandHandler o-- wasteless.server.business.ExportService : exportService
  wasteless.server.business.command_handler.GroceryListCommandHandler o-- wasteless.server.presentation.mapper.GroceryListMapper : groceryListMapper
  wasteless.server.business.command_handler.GroceryListCommandHandler o-- wasteless.server.business.command_service.GroceryListCommandService : groceryListService
  wasteless.server.business.command_handler.GroceryListCommandHandler o-- wasteless.server.business.WasteManagerService : wasteManagerService
  wasteless.server.business.command_handler.ItemCommandHandler o-- wasteless.server.presentation.mapper.ItemMapper : itemMapper
  wasteless.server.business.command_handler.ItemCommandHandler o-- wasteless.server.business.command_service.ItemCommandService : itemService
  wasteless.server.business.command_handler.UserCommandHandler o-- wasteless.server.presentation.mapper.UserMapper : userMapper
  wasteless.server.business.command_handler.UserCommandHandler o-- wasteless.server.business.query_service.UserQueryService : userQueryService
  wasteless.server.business.command_handler.UserCommandHandler o-- wasteless.server.business.command_service.UserCommandService : userService

  wasteless.server.business.query_handler.GroceryListQueryHandler o-- wasteless.server.business.ExportService : exportService
    wasteless.server.business.query_handler.GroceryListQueryHandler o-- wasteless.server.presentation.mapper.GroceryListMapper : groceryListMapper
    wasteless.server.business.query_handler.GroceryListQueryHandler o-- wasteless.server.business.query_service.GroceryListQueryService : groceryListService
    wasteless.server.business.query_handler.GroceryListQueryHandler o-- wasteless.server.business.WasteManagerService : wasteManagerService
    wasteless.server.business.query_handler.ItemQueryHandler o-- wasteless.server.presentation.mapper.ItemMapper : itemMapper
    wasteless.server.business.query_handler.ItemQueryHandler o-- wasteless.server.business.query_service.ItemQueryService : itemService
    wasteless.server.business.query_handler.UserQueryHandler o-- wasteless.server.presentation.mapper.UserMapper : userMapper
    wasteless.server.business.query_handler.UserQueryHandler o-- wasteless.server.business.query_service.UserQueryService : userService


  wasteless.server.presentation.mediators.GroceryListMediator o-- wasteless.server.business.command_handler.GroceryListCommandHandler : groceryListCommandHandler
  wasteless.server.presentation.mediators.GroceryListMediator o-- wasteless.server.business.query_handler.GroceryListQueryHandler : groceryListQueryController
  wasteless.server.presentation.mediators.ItemMediator o-- wasteless.server.business.command_handler.ItemCommandHandler : itemCommandHandler
  wasteless.server.presentation.mediators.ItemMediator o-- wasteless.server.business.query_handler.ItemQueryHandler : itemQueryController
  wasteless.server.presentation.mediators.UserMediator o-- wasteless.server.business.command_handler.UserCommandHandler : userCommandHandler
  wasteless.server.presentation.mediators.UserMediator o-- wasteless.server.business.query_handler.UserQueryHandler : userQueryController


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
